syntax = "proto3";
package DataFormat;

message LoginMsg {
    int32 uid = 1;
    string name = 2;
}

message LoginRsp {
    fixed32 ret = 1;
    string msg = 2;
}
